added a couple of references for models

--- a/book.bib
+++ b/book.bib
@@ -154,6 +154,17 @@ edition = {1st},
 	publisher    =	{Metaphysics Research Lab, Stanford University}
 }
 
+@InCollection{sep-models-science,
+	author       =	{Frigg, Roman and Hartmann, Stephan},
+	title        =	{{Models in Science}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta},
+	howpublished =	{\url{https://plato.stanford.edu/archives/spr2020/entries/models-science/}},
+	year         =	{2020},
+	edition      =	{{S}pring 2020},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
+
 @InCollection{sep-reasoning-defeasible,
 	author       =	{Koons, Robert},
 	title        =	{{Defeasible Reasoning}},
@@ -312,6 +323,17 @@ edition = {1st},
   author={Domingos, Pedro},
   year={2015},
   publisher={Basic Books}
+}
+
+@article{domingos2012few,
+  title={A few useful things to know about machine learning},
+  author={Domingos, Pedro},
+  journal={Communications of the ACM},
+  volume={55},
+  number={10},
+  pages={78--87},
+  year={2012},
+  publisher={ACM New York, NY, USA}
 }
 
 @article{deaton2018understanding,
